<resources>
    <string name="app_name">Janus</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo_3">Logo :3</string>
    <string name="slidescreen">slidescreen picture</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">Main</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="password">Password</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="signup">Signup</string>
    <string name="show_password">Show password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="username_or_email">Username or email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Folder_Invest_Profile">Mis Inversiones</string>
    <string name="Folder_My_Projects_Profile">Mis Proyectos</string>
    <string name="signup_uwu">Signup UwU</string>
    <string name="signup_logo">Signup Logo</string>
    <string name="back_to_login">Back to login</string>
    <string name="i_accept_terms_and_conditions">I accept terms and conditions</string>
    <string name="birthday_holder">Birthday: MM/DD/YYYY</string>
    <string name="verify_password">verify password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="email">email</string>
    <string name="verify_email">verify email</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="janus">Janus</string>
    <string name="searchHint">Write whatever you like to search...</string>
    <string name="followButton">FOLLOW</string>
    <string name="unfollowButton">UNFOLLOW</string>
</resources>