<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/icon_form"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:background="@color/azulito"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_baseline_assignment_24"/>
        <TextView
            android:id="@+id/Mensaje_de_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_uwu"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/icon_form" />

        <LinearLayout
            android:id="@+id/Nombres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_form">

            <EditText
                android:id="@+id/newUserFirstName"
                style="@style/Theme.JanusApp.text_boxes"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:hint="First Name"
                android:inputType="textPersonName"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/newUserLastName"
                style="@style/Theme.JanusApp.text_boxes"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:hint="Last Name"
                android:textAllCaps="false" />
        </LinearLayout>

        <EditText
            android:id="@+id/newUserEmail"
            style="@style/Theme.JanusApp.text_boxes"
            android:layout_width="0dp"
            android:hint="email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Nombres" />

        <EditText
            android:id="@+id/newUserEmailVerification"
            style="@style/Theme.JanusApp.text_boxes"
            android:layout_width="0dp"
            android:hint="verify email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newUserEmail" />
        <!-- Ver si se puede verificar mientras se escribe xd-->
        <LinearLayout
            android:id="@+id/OtherData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newUserEmailVerification">

            <EditText
                android:id="@+id/newUserUsername"
                style="@style/Theme.JanusApp.text_boxes"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:hint="Username"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/newUserMobilenumber"
                style="@style/Theme.JanusApp.text_boxes"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:hint="Mobile Number"
                android:inputType="phone"
                android:textAllCaps="false" />
        </LinearLayout>

        <EditText
            android:id="@+id/newUserPassword"
            style="@style/Theme.JanusApp.text_boxes"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/OtherData" />

        <EditText
            android:id="@+id/newUserPasswordVerification"
            style="@style/Theme.JanusApp.text_boxes"
            android:layout_width="0dp"
            android:hint="verify password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newUserPassword" />

        <LinearLayout
            android:id="@+id/Fechagenero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newUserPasswordVerification">

            <EditText
                android:id="@+id/newUserBirthdate"
                style="@style/Theme.JanusApp.text_boxes"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:clickable="true"

                android:hint="Birthday: MM/DD/YYYY"
                android:inputType="date"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/newUserGender"
                style="@style/Theme.JanusApp.text_boxes"
                android:layout_width="match_parent"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:entries="@array/Gender_Spinner"

                android:textAllCaps="false" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/Acepto_UwU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:text="I accept terms and conditions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fechagenero" />

        <LinearLayout
            android:id="@+id/buttonslog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Acepto_UwU"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/goBackToLogInButton"
                style="@style/Theme.JanusApp.innerRowitems"
                android:onClick="change"
                android:text="Back to login"
                android:textAllCaps="false"
                android:textColorHighlight="@color/black" />

            <Button
                android:id="@+id/SignUpButton"
                style="@style/Theme.JanusApp.innerRowitems"
                android:text="@string/signup"
                android:textAllCaps="false" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>